# fastforge

./: Cargo.toml  Makefile
.github/workflows/: ci.yml
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs
src/commands/: history.rs  install.rs  login.rs  logout.rs  mod.rs  refer.rs  upgrade.rs
src/models/: auth.rs  install.rs  mod.rs
src/services/: auth.rs  local_installer.rs  mod.rs  system_check.rs
src/utils/: file.rs  mod.rs
