[package]
name = "fastforge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.38", features = ["derive"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio ={ version = "1.45.0", features = ["full"]}
reqwest = {version = "0.12.15", features = ["json"]}
dotenv = "0.15.0"
indicatif = "0.17.11"
dialoguer = "0.11.0"
sysinfo = "0.35.1"
console = "0.15.11"
dirs = "6.0.0"
uuid = "1.16.0"
chrono = "0.4.41"
anyhow = "1.0.98"
base64 = "0.22.1"
ring = "0.17.14"
colored = "3.0.0"
log = "0.4.27"
tracing-subscriber = "0.3.19"
env_logger = "0.11.8"